<resources>
    <string name="app_name">ProjectBored</string>
    <string name="all_ideas">All ideas</string>

    <string name="give_me_an_idea">Give me an idea</string>
    <string name="show_in_map">Show in Map</string>

    <string-array name="price">
        <item>Any</item>
        <item>Free</item>
        <item>Paid</item>
    </string-array>

    <string name="group_activity">Group activity</string>
    <string name="bored">Bored</string>
    <string name="options">Options</string>
    <string name="app_settings">App Settings</string>
    <string name="Settings_sample_text">Here you can change the application\'s settings, like Dark mode and\n\"Power User\" mode.</string>
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="power_user">Power User</string>
    <string name="write_your_own_idea">Write your own idea</string>
    <string name="title">Title</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="maps_search">Maps Search</string>
    <string name="x">X</string>
    <string name="are_you_sure_you_want_to_delete_this_idea">Are you sure you want to delete this idea?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete">Delete</string>
    <string name="Add_idea">Add idea</string>
    <string name="power_user_description">As a Power User you are able to add Google Maps search parameters to your events</string>
    <string name="reset_database">Reset Database</string>
    <string name="Reset_database_description">WARNING: This will erase all your data and reset the database to the default events.</string>
    <string name="reset_database_are_u_sure">Are you sure you want to reset the databse?</string>
    <string name="group">Group:</string>
    <string name="price">Price:</string>
    <string name="location">Location:</string>

    <string-array name="locationArray">
        <item>Any</item>
        <item>Indoors</item>
        <item>Outdoors</item>
    </string-array>

    <string-array name="isGroupArray">
        <item>Any</item>
        <item>Alone</item>
        <item>Group</item>
    </string-array>

</resources>
