<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="260dp"
        android:layout_height="100dp"
        android:text="@string/settings"
        android:textSize="64sp"
        android:textAlignment="center"
        android:lineSpacingExtra="10sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/settings_sample_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/Settings_sample_text"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/settings_title"
        android:justificationMode="inter_word" />

    <Switch
        android:id="@+id/dark_theme_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_sample_text"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:text="@string/dark_theme"
        android:layout_marginStart="30dp" />


</RelativeLayout>