<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">
    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:background="?attr/backgroundColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainFragment">

        <TextView
            android:id="@+id/title"
            android:textColor="?attr/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bored"
            app:fontFamily="@font/dual_300"
            android:textSize="60sp"
            android:shadowRadius="3"
            android:shadowDy="3"
            android:lineSpacingExtra="10sp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true" />

        <View
            android:id="@+id/separator_under_title"
            android:layout_width="260dp"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/title"
            android:background="@color/light_grey"
            android:shadowColor="@color/grey"
            android:shadowRadius="4"
            android:shadowDy="5"
            android:shadowDx="3"/>


        <Button
            android:id="@+id/ideaButton"
            android:background="@drawable/round_button"
            android:textColor="@android:color/white"
            android:shadowColor="@color/grey"
            android:shadowRadius="4"
            android:shadowDy="4"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="178dp"
            android:layout_height="179dp"
            android:lineSpacingExtra="10sp"
            android:text="@string/give_me_an_idea"
            app:fontFamily="@font/dual_300"
            android:paddingLeft="25dp"
            android:paddingStart="25dp"
            android:paddingRight="25dp"
            android:paddingEnd="25dp"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/options_button"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="?attr/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ideaButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/options"
            app:fontFamily="@font/dual_300"
            android:shadowRadius="4"
            android:shadowDy="4"
            android:textSize="25sp"/>

        <View
            android:id="@+id/separator_under_idea_button"
            android:layout_width="260dp"
            android:layout_height="1dp"
            android:background="@color/light_grey"
            android:layout_above="@id/all_ideas_button"
            android:layout_centerHorizontal="true"
            android:shadowRadius="4"
            android:shadowDy="5"
            android:shadowDx="3"/>

        <Button
            android:id="@+id/all_ideas_button"
            android:textColor="?attr/textColor"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/settings_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/all_ideas"
            app:fontFamily="@font/dual_300"
            android:shadowRadius="3"
            android:shadowDy="3"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/settings_button"
            android:textColor="?attr/textColor"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:text="@string/app_settings"
            app:fontFamily="@font/dual_300"
            android:shadowRadius="3"
            android:shadowDy="3"
            android:textSize="20sp"/>

    </RelativeLayout>
</ScrollView>